# NasFolderSync

./: .gitignore  FolderSync.spec  LICENSE  Makefile  NasFolderSync.spec  README.md  UNasSync.spec  app.py  build.sh  generate_icon.py  pyproject.toml  sync.py
tests/: test_app_logic.py  test_build.py  test_config.py  test_history.py  test_sync.py
