[project]
name = "unassync"
version = "1.0.0"
description = "NasFolderSync — macOS menu bar app that syncs Google Drive to a NAS via rclone"
requires-python = ">=3.14"
dependencies = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
    ".pytest_cache",
    ".build",
    ".mypy_cache",
    ".github",
]
line-length = 150
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "PL", # pylint
]
ignore = ["E203", "E266", "E501", "W191"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"app.py" = ["PLR0915"]
"sync.py" = ["PLR0913"]

[tool.ruff.lint.isort]
known-third-party = ["rumps"]
