[project]
name = "foldersync"
version = "1.0.0"
description = "FolderSync — macOS menu bar wrapper around rclone for automated folder sync"
license = "AGPL-3.0-only"
authors = [
    { name = "Ran Isenberg", email = "ran.isenberg@ranthebuilder.cloud" },
]
urls = { Homepage = "https://www.ranthebuilder.cloud", Sponsor = "https://github.com/sponsors/ran-isenberg" }
requires-python = ">=3.14"
dependencies = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "pyinstaller>=6.0.0",
    "Pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
    ".pytest_cache",
    ".build",
    ".mypy_cache",
    ".github",
]
line-length = 150
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "PL", # pylint
]
ignore = ["E203", "E266", "E501", "W191"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]
"app.py" = ["PLR0915", "PLR2004"]
"sync.py" = ["PLR0913"]

[tool.ruff.lint.isort]
known-third-party = ["rumps"]
